# Improved validations JS not only highlighting invalid fields and label but also adding inline system message, also removed remaining mootools code from validate.js

--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -51,13 +51,14 @@ FLEXI_APPROVAL_ITEM_SUBMITTED="1 item submitted for approval."
 FLEXI_APPROVAL_ITEMS_SUBMITTED="items submitted for approval."
 FLEXI_APPROVAL_NO_ITEMS_SUBMITTED="No items submitted for approval."
 FLEXI_DATE="Date"
+FLEXI_DATES="Dates"
 FLEXI_HITS="Hits"
 FLEXI_ID="ID"
 FLEXI_REORDER="Order"
 FLEXI_TITLE="Title"
 FLEXI_TYPE_NAME="Type"
 FLEXI_ACTION="Action"
-FLEXI_ARCHIVED="Archived :: Unpublished"
+FLEXI_ARCHIVED="Archived"
 FLEXI_ARCHIVED_STATE="Archived"
 FLEXI_ARCHIVE_THIS_ITEM="Set state as : archived"
 FLEXI_AUTHOR="Author"
@@ -1983,7 +1984,7 @@ FLEXI_TRASH_THIS_ITEM="Set state as : trashed"
 FLEXI_CLICK_TO_CHANGE_STATE="- CLICK to change state of the item"
 FLEXI_STATE_CHANGER_DISABLED="- Popup State Changer Disabled (e.g too many items listed per page)"
 
-FLEXI_TRASHED="Trashed :: Unpublished"
+FLEXI_TRASHED="Trashed"
 FLEXI_UNKNOWN="Unknown :: unpublished"
 
 ; Configuration groups
@@ -3056,14 +3057,18 @@ FLEXI_MU_RUPDATED_TIMEFRAME_INTERVALS_DESC="These is a comma separated list of i
 FLEXI_MU_RUPDATED_TIMEFRAME_NAMES="Timeframe names"
 FLEXI_MU_RUPDATED_TIMEFRAME_NAMES_DESC="These is a comma separated list of language strings. These are matched with the above timeframes one to one, in the same order as entered above"
 
-; CSV import form: view legends
-FLEXI_IMPORT_TYPE_AND_CORE_PROPS_LEGEND="1°- Choose the type of items you wish to import, and other core properties"
-FLEXI_IMPORT_CATS_LEGEND="2°- Choose the category(ies) you wish to import the items in"
-FLEXI_IMPORT_CSV_FILE_FORMAT_LEGEND="3°- CSV file format"
-FLEXI_CSV_FILE_FILE_FOLDERS_LEGEND="4°- CSV file and file Folders"
-FLEXI_IMPORT_CSV_FILE_FORMAT_EXPLANATION="CSV file format explanation"
 
 ; CSV import form: form label and descriptions
+FLEXI_IMPORT_CATS_TIP="Choose the category(ies) you wish to import the items in"
+FLEXI_IMPORT_TAGS_TIP="Choose the tags that you wish to assign to the items"
+FLEXI_IMPORT_INTO_CATEGORIES_WITH_OVERRIDE_DESC="NOTE: set default categories, optionally you can use language 'catid' and 'cid' to override defaults. If some items have empty column the default will be used"
+FLEXI_IMPORT_TAGS_WILL_BE_CREATED_BEFORE_IMPORT="NOTE: for 'tags_names' column, tags not already existing, will be created automatically, before they are assinged to the item"
+
+FLEXI_IMPORT_CSV_FILE_N_FORMAT="File and Format"
+FLEXI_IMPORT_CSV_FILE_EXAMPLE="CSV file example"
+FLEXI_IMPORT_CSV_FILE_FORMAT="CSV file format"
+FLEXI_IMPORT_CSV_FILE_FORMAT_EXPLANATION="CSV file format explanation"
+
 FLEXI_IMPORT_FILE_OVERRIDE="File override"
 FLEXI_IMPORT_IGNORE_UNUSED_COLUMNS="Ignore unused columns"
 FLEXI_IMPORT_CUSTOM_ITEM_ID="Custom ITEM 'id'"
@@ -3088,19 +3093,26 @@ FLEXI_IMPORT_USE_METAKEY_COL="Use 'metakey' column (METADATA Keywords)"
 FLEXI_IMPORT_ENTER_VALID_DATES="TAKE care to enter valid dates or process will fail e.g. 'YYYY-MM-DD hh:mm:ss' OR ''YYYY/MM/DD ' OR 'YY-MM-DD'"
 FLEXI_IMPORT_USE_PUBLISH_UP_COL="Use 'publish_up' column (Start Publication)"
 FLEXI_IMPORT_USE_PUBLISH_DOWN_COL="Use 'publish_down' column (End Publication)"
-FLEXI_IMPORT_TAGS_WILL_BE_CREATED_BEFORE_IMPORT="NOTE: for 'tags_names' column, tags not already existing, will be created automatically, before they assinged to the item"
+
 FLEXI_IMPORT_DO_NOT_IMPORT_TAGS="Do not import tags"
-FLEXI_IMPORT_USE_TAG_NAMES_COL="Use 'tags_names' (Comma separated list of tag names)"
+FLEXI_IMPORT_USE_TAG_NAMES_COL="Use 'tags_names' column (Comma separated list of tag names)"
 FLEXI_IMPORT_USE_TAG_IDS_COL="Use 'tags_raw' column (Comma separated list of tag ids)"
 
-FLEXI_IMPORT_ABOUT_NEW_FILES="<b>These are folders for new files</b>. <br/> CSV files should contain filenames relative to these folder, <br/> e.g. if file is directly inside these folders then enter only the filename"
-FLEXI_IMPORT_SKIP_FILE_CHECK="Skip FILE exist check"
-FLEXI_IMPORT_SKIP_FILE_CHECK_DESC="Initially run with no skipping then if you want to ignore some files missing or if you are using image/gallery field in DB-reusable mode, check these to skip check that files exist"
+FLEXI_IMPORT_ABOUT_NEW_FILES="<b>These are folders for new files</b>. <br/> CSV file should contain filenames relative to these folders"
+FLEXI_IMPORT_SKIP_FILE_CHECK="Skip file existence check"
+FLEXI_IMPORT_SKIP_FILE_CHECK_DESC="Initially run with no skipping and a report will be given of missing files. <br/><br/>Then if you want to ignore some files missing or if you are using image/gallery field in DB-reusable mode, check these to skip check that files exist"
 
 ; CSV Import configuration
 FLEXI_IMPORT_MANAGER_CONF="Import Manager Configuration"
 FLEXI_IMPORT_CORE_CONF="Core properties/ Core fields"
 FLEXI_IMPORT_CSV_FILE_FORMAT="CSV file format"
+FLEXI_IMPORT_MVAL_MPROP_FIELDS="Multi-value / multi-property fields"
+
+FLEXI_CSV_MVAL_SEPARATOR="Multi-value separator"
+FLEXI_CSV_MVAL_SEPARATOR_DESC="Fields that are multi-valued"
+FLEXI_CSV_MPROP_SEPARATOR="Multi-property separator"
+FLEXI_CSV_MPROP_SEPARATOR_DESC="Fields that have multiple properties per value"
+
 FLEXI_CSV_FIELD_SEPARATOR="Field Separator"
 FLEXI_CSV_FIELD_SEPARATOR_DESC="Multiple characters recommended e.g : ~~ &nbsp; for tab enter: &#92;t"
 FLEXI_CSV_FIELD_ENCLOSE_CHAR="Field Encloser Character"
@@ -3111,10 +3123,10 @@ FLEXI_CSV_DISPLAY_FIELDS_OF_FIRST_RECORDS="Debug first # items"
 FLEXI_CSV_DISPLAY_FIELDS_OF_FIRST_RECORDS_DESC="This will print the fields of the first # records (items). <br/><br/><b>NOTE:</b> this is used <b>only when testing the file format</b>. <br/> It is recommended to test your CSV file before trying to import."
 FLEXI_IMPORT_FOLDERS="Media / document Folders"
 
-FLEXI_IMPORT_MEDIA_FOLDER="Media Folder <br/><small>(used by image/gallery fields, etc)</small>"
-FLEXI_IMPORT_DOCUMENTS_FOLDER="Document Folder <br/><small>(used by file fields, etc)</small>"
+FLEXI_IMPORT_MEDIA_FOLDER="Media Folder <br/><small>(image/gallery fields)</small>"
+FLEXI_IMPORT_DOCUMENTS_FOLDER="Document Folder <br/><small>(file fields)</small>"
 FLEXI_IMPORT_FOLDER_DESC="Please enter a relative path e.g. <br/> <b>tmp/foldername</b> ... inside your Joomla installation folder <br/> <b>../foldername</b> ... just above Joomla installation folder"
-FLEXI_IMPORT_FILE_IN_SUBFOLDER_DESC="Files can be in subfolder, e.g. for 'tmp/foldername/field55/dd.jpg', <br/>use filename: 'field55/dd.jpg'"
+FLEXI_IMPORT_FILE_IN_SUBFOLDER_DESC="For files in subfolder, e.g. for 'tmp/foldername/field55/dd.jpg', <br/>use filename: 'field55/dd.jpg'"
 
 ; Some generic names, used in CSV import and maybe elsewhere
 FLEXI_CREATION_DATE="Creation date"
