--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -3075,9 +3075,11 @@ FLEXI_IMPORT_CUSTOM_ITEM_ID="Custom ITEM 'id'"
 
 FLEXI_IMPORT_IGNORE_REDUDANT_COLS="Enable this if you have redudant columns."
 FLEXI_IMPORT_IGNORE_REDUDANT_COLS_DESC="Column HEADERS must be either (a) <b>item properties</b> or (b) <b>field names</b>"
+FLEXI_IMPORT_STOP_IMPORT="Stop import"
 FLEXI_IMPORT_CUSTOM_COLS="CUSTOM COLUMNS"
 FLEXI_IMPORT_ALL_IDS_CHECKED_BEFORE_IMPORT="NOTE: Before any items are created, all item ids are checked if they already exist"
 FLEXI_IMPORT_USE_ID_COL="Use 'id' column"
+FLEXI_IMPORT_AUTO_NEW="Automantic (new)"
 FLEXI_IMPORT_CREATION_CURR_DATE="Current Date"
 FLEXI_IMPORT_CREATION_USE_COL="Use 'created' column with a valid date, e.g. 17/10/2012"
 FLEXI_IMPORT_CREATOR_CURR_USER="Current User"
@@ -3200,6 +3202,7 @@ FLEXI_ON_RIGHT="On Right"
 FLEXI_CUSTOM="Custom"
 FLEXI_CUSTOMIZE="Customize"
 FLEXI_LOAD_EXAMPLE="Load example"
+FLEXI_IGNORE="Ignore"
 
 FLEXI_BASIC_DISPLAY="Basic Display"
 FLEXI_INFORMATION="Information"
