--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -342,6 +342,8 @@ FLEXI_UPLOAD_TIME="Upload time"
 FLEXI_ADD_FILE="Add file"
 FLEXI_ADD_FILE_BY_URL="Add file by URL"
 FLEXI_ADD_FILE_FROM_SERVER="Add file(s) from server"
+FLEXI_URL_SECURE="URL secure"
+FLEXI_URL_SECURE_DESC="Yes = 'Secure', means the file can not be view / downloaded by direct URL. <br/> No = 'Media', means that file can be view/downloaded via direct URL"
 FLEXI_CHOOSE_DIRECTORY="Choose target directory"
 FLEXI_CHOOSE_DIRECTORY_DESC="If you select secure, the users will never see the real path of the file and will only be allowed <b>indirect access</b> to the file. <br/>This option is suitable for e.g. <br/> - document files * <br/> - high resolution copyrighted images *<br/> * attach to content via <b>FILE</b> field<br/> ** attach to content via  <b>FILE</b> field or <b>image/gallery</b> field <br/><br/>NOTE: <br/>1. If you select media folder, then direct access will be allowed thus you will be able to play media files via media players embedded in visitor's browser. <br/><br/>2. Image files in the secure folder can be either privileged accessed via file field or viewable by (optionally watermarked) thumbnails created by the image/gallery field and you will still keep the secure download feature."
 FLEXI_CHOOSE_FILE="Choose a file"
