# Fixed issue with no value in untranslatable fields in item listings (worked in item view only), fixed voting field always requiring composite voting to be filled-in. Improved template XML files and layout switcher with default title per layout, that is language translatable

--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -3340,3 +3340,7 @@ FLEXI_ERROR_ALL_LANGUAGE_ASSOCIATED="An item set to All languages can't be assoc
 FLEXI_FORM_NEW="New"
 FLEXI_FORM_EDIT="Edit"
 FLEXI_FORM_SELECT="Select"
+
+; v3 Layout improvements
+FLEXI_LAYOUT_CUSTOM_DISPLAY_TITLE="Layout custom title"
+FLEXI_LAYOUT_CUSTOM_DISPLAY_TITLE_DESC="This will be displayed to frontend user, e.g. as tooltip of frontend layout switcher"
