--- a/site/templates/faq/language/en-GB/en-GB.ini
+++ b/site/templates/faq/language/en-GB/en-GB.ini
@@ -6,3 +6,9 @@ FLEXI_HTML_MODE="Choose HTML version"
 FLEXI_HTML_MODE_DESC="Choose between xhtml or html5."
 FLEXI_XHTML="xhtml"
 FLEXI_HTML5="html5"
+
+FLEXI_FAQ_CATEGORY_DEFAULT_TITLE="Per sub-category placement"
+FLEXI_FAQ_CATEGORY_SHORT_DESC="Category layout that groups and places items in sub-category groups"  ; with tiling capability
+
+FLEXI_FAQ_ITEM_DEFAULT_TITLE="Modular"
+FLEXI_FAQ_ITEM_SHORT_DESC="Modular item layout that also includes tabbed/slider positions, suitable for general usage"
