--- a/site/templates/default/language/en-GB/en-GB.ini
+++ b/site/templates/default/language/en-GB/en-GB.ini
@@ -7,8 +7,10 @@ FLEXI_HTML_MODE_DESC="Choose between xhtml or html5."
 FLEXI_XHTML="xhtml"
 FLEXI_HTML5="html5"
 
-FLEXI_DEFAULT_CATEGORY_DEFAULT_TITLE="Table listing"
-FLEXI_DEFAULT_CATEGORY_SHORT_DESC="Category layout that displays items in a table, placing each field in a separate column, allowing to hide and sort columns"
+FLEXI_TMPL_DEFAULT_CATEGORY_DEFAULT_TITLE="Table listing"
+FLEXI_TMPL_DEFAULT_CATEGORY_SHORT_DESC="Category layout that displays items in a table, placing each field in a separate column, allowing to toggle columns"
 
-FLEXI_DEFAULT_ITEM_DEFAULT_TITLE="Modular"
-FLEXI_DEFAULT_ITEM_SHORT_DESC="Modular item layout that also includes tabbed/slider positions, suitable for general usage"
+FLEXI_TMPL_DEFAULT_ITEM_DEFAULT_TITLE="Modular"
+FLEXI_TMPL_DEFAULT_ITEM_SHORT_DESC="Modular item layout that also includes tabbed/slider positions, suitable for general usage"
+
+FLEXI_TMPL_DEFAULT_COLUMNS_FE="Columns"
