# Added option to FAQ template (sub-category placement) to place sub-category columns as masonry tiles

--- a/site/templates/default/language/en-GB/en-GB.ini
+++ b/site/templates/default/language/en-GB/en-GB.ini
@@ -14,3 +14,6 @@ FLEXI_TMPL_DEFAULT_ITEM_DEFAULT_TITLE="Modular"
 FLEXI_TMPL_DEFAULT_ITEM_SHORT_DESC="Modular item layout that also includes tabbed/slider positions, suitable for general usage"
 
 FLEXI_TMPL_DEFAULT_COLUMNS_FE="Columns"
+
+FLEXI_TMPL_DEFAULT_TOGGLABLE_TABLE_COLS="Toggleable columns"
+FLEXI_TMPL_DEFAULT_TOGGLABLE_TABLE_COLS_DESC="Allow the user to toggle (hide/show) the table columns"
