--- a/site/templates/faq/language/en-GB/en-GB.ini
+++ b/site/templates/faq/language/en-GB/en-GB.ini
@@ -12,3 +12,6 @@ FLEXI_TMPL_FAQ_CATEGORY_SHORT_DESC="Category layout that groups and places items
 
 FLEXI_TMPL_FAQ_ITEM_DEFAULT_TITLE="Modular"
 FLEXI_TMPL_FAQ_ITEM_SHORT_DESC="Modular item layout that also includes tabbed/slider positions, suitable for general usage"
+
+FLEXI_TMPL_FAQ_COLS_PLACEMENT="Columns placement"
+FLEXI_TMPL_FAQ_COLS_PLACEMENT_DESC="Select placement of sub-categories columns, as masonry tiles or cleared"
