# Improved display of version checking in backend dashboard, and some restructuring of component parameters, placing them to more proper locations

--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -730,8 +730,8 @@ FLEXI_ADV_CACHE_TIME="Cache duration"
 FLEXI_ADV_CACHE_TIME_DESC="The time before the items are automatically re-cached. Default is one hour (3600 sec)."
 FLEXI_ADV_CACHE_GUEST="Guest only"
 FLEXI_ADV_CACHE_GUEST_DESC="Activate the cache for guests only. Recommended if you use our FLEXIaccess advanced ACL system."
-FLEXI_DISABLE_FRONTEND_CSS="Disable CSS"
-FLEXI_DISABLE_FRONTEND_CSS_DESC="Do not load the FLEXIcontent default CSS file (flexicontent.css). (Not recommended for inexperienced designers). <br/><br/><b>NOTE:</b> modules need and load this file(s), along with the module specific CSS, this is done because they may appear in non-FLEXIcontent views. There is a per module parameter to disable loading of CSS files"
+FLEXI_LOAD_FLEXICONTENT_CSS="Load FLEXIcontent CSS"
+FLEXI_LOAD_FLEXICONTENT_CSS_DESC="Do not load the FLEXIcontent default CSS file (flexicontent.css). (Not recommended for inexperienced designers). <br/><br/><b>NOTE:</b> modules need and load this file(s), along with the module specific CSS, this is done because they may appear in non-FLEXIcontent views. There is a per module parameter to disable loading of CSS files"
 
 ; Category parameters
 FLEXI_CHOOSE_SPECIFIC_CATEGORY_LAYOUT_DESC="Set a specific category layout for this category"
@@ -1253,8 +1253,8 @@ FLEXI_AUTO_APPROVE="Auto-approve versions"
 FLEXI_AUTO_APPROVE_DESC="Disable advanced versioning and auto-approve newly created versions so that they are automatically current"
 FLEXI_VERSION_PER_PAGE="# versions per page"
 FLEXI_VERSION_PER_PAGE_DESC="The number of versions you wish to display per page"
-FLEXI_LOAD_TOOLTIPS="Load mootools tooltips"
-FLEXI_LOAD_TOOLTIPS_DESC="Load the <u>mootools tooltips behavior</u> from Joomla to display the nice tooltips in frontend.<br/><br/><b>NOTE:</b><br/> Frontend views that use favorites or voting field (and maybe other fields too) in the frontend, will ignore this setting, and <b>force</b> the loading of the tooltips behavior"
+FLEXI_LOAD_FRAMEWORK_TOOLTIPS="Load tooltips JS"
+FLEXI_LOAD_FRAMEWORK_TOOLTIPS_DESC="Load the tooltips JS, to display nice tooltips in frontend.<br/><br/><b>NOTE:</b><br/> Frontend views that use favorites or voting field (and maybe other fields too) in the frontend, may ignore this setting, and <b>force</b> the loading of the tooltips behavior"
 FLEXI_CURRENT_VERSIONS="Add the items current versions"
 FLEXI_VERSION_VIEW_MODE="View mode"
 FLEXI_VERSION_CODE_MODE="Code mode"
@@ -1316,8 +1316,8 @@ FLEXI_NEWS_VERSION_COMPONENT="A newer version of FLEXIcontent is available"
 FLEXI_LATEST_VERSION="Latest version"
 FLEXI_INSTALLED_VERSION="Installed Version"
 FLEXI_RELEASED_DATE="Release date"
-FLEXI_CHECK_UPDATE="Enable update check"
-FLEXI_CHECK_UPDATE_DESC="Enables a check for the latest version of FLEXIcontent and displays the update status on the dashboard."
+FLEXI_SHOW_VERSION_CHECK="Show version checking"
+FLEXI_SHOW_VERSION_CHECK_DESC="Enables a check for the latest version of FLEXIcontent and displays the update status on the dashboard. If this is disabled, then check can be performed manually by opening the version check slider"
 
 ; Added 1.5.4 stable"
 FLEXI_LABEL_FILTER_WITH_OVERRIDE="Show filter label"
@@ -1878,7 +1878,7 @@ FLEXI_SHOW_UNAUTHORIZED_LINKS_DESC="Content items not authorized to be viewable 
 
 FLEXI_DISPLAY_STATS_INFO="Display performance statitstics"
 FLEXI_DISPLAY_STATS_INFO_DESC="Display performance statistics and other execution information"
-FLEXI_YES_VIA_FCDEBUG_URLVAR="Yes, via fcdebug=1 URL variable"
+FLEXI_YES_VIA_FCDEBUG_URLVAR="URL variable: fcdebug=1"
 FLEXI_NEW_ITEM_NOT_CREATED="The content was not created"
 FLEXI_EXISTING_ITEM_NOT_SAVED="Changes to the content were not saved"
 FLEXI_FIELD_VALUE_IS_INVALID="Field %s has invalid value."
@@ -2799,8 +2799,10 @@ FLEXI_NONSELECTED_VALUES="Non-Selected Values"
 FLEXI_BROWSER_FRAMEWORKS="Browser Frameworks / Libraries"
 FLEXI_USE_BROWSER_FRAMEWORKS="Use in Frontend / Backend <br/><small>(loading them when needed) *</small>"
 FLEXI_USE_BROWSER_FRAMEWORKS_DESC="Some of these libraries can be disabled, some are always needed. Normally you should leave everything here enabled. <br/><br/><b>NOTE:</b> If you set some of these to be manually loaded in frontend, then you should make sure that they you loaded via some 3rd party extension, e.g. in your Joomla Template. <br/><br/><b>NOTE:</b> If you do not load the needed frameworks then behaviour/appeareance of frontend forms (mostly item form) will get broken"
+FLEXI_FRONTEND_BACKEND="Frontend / Backend"
 FLEXI_BACKEND_ONLY="Backend only"
 FLEXI_MANUALLY_IN_FRONTEND="Manually in frontend"
+FLEXI_DISABLE_IN_FRONTEND="Disable in frontend"
 
 FLEXI_FLEXIMPORT_INFOS="flexIMPORT is a professional and commercial tool to <b>import</b> and <b>export</b> data in FLEXIcontent.<br/>You can :<ul><li>Manage XML and CSV file</li><li>Use custom file format</li><li>Use data from external file (ftp,web) or local</li><li>Automate import and export by cron task</li><li>Filter your exports with a lot of parameters</li><li>And a lot of options ...</li></ul>"
 FLEXI_FLEXIMPORT_INSTALLED="%s <a href='index.php?option=com_fleximport' title='flexIMPORT'><b>flexIMPORT installed, click here to use it</b></a>"
