--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -969,6 +969,7 @@ FLEXI_MAX_ITEM_COLS_RESPONSIVE="Max item columns (responsive)"
 FLEXI_ITEMS_PLACEMENT="Items placement"
 FLEXI_FLOATED_LEFT="Floated left"
 FLEXI_CLEARED="Cleared"
+FLEXI_AS_PLACEHOLDER="As placeholder"
 FLEXI_AS_MASONRY_TILES="As masonry tiles"
 FLEXI_LEADING_NUM="# Leading"
 
@@ -2581,7 +2582,7 @@ FLEXI_FIELD_SINGLE_VALUE_SUFFIX_TEXT_DESC="This text is placed immediately <b>af
 FLEXI_FIELD_EXTRA_ATTRIBUTES="Field attributes"
 FLEXI_FIELD_EXTRA_ATTRIBUTES_DESC="Here you can enter some extra attibutes (HTML Tag Parameters) for the form field like e.g. onkeypress=&quot;...&quot; onmouseover=&quot;...&quot; somename=&quot;somevalue&quot;. Take care not to break the the HTML syntax of the form field"
 FLEXI_FIELD_PLACEHOLDER="Placeholder"
-FLEXI_FIELD_PLACEHOLDER_DESC="A word / short text inside the input visible before user starts typing"
+FLEXI_FIELD_PLACEHOLDER_DESC="A word / short text, displayed inside the input, until the user starts typing. This can be a language string"
 
 FLEXI_FIELD_ALTERNATIVE_DISPLAY="Alternative Display"
 FLEXI_FIELD_NUMBER_OF_VALUES="Number of values"
