Fixed item form to display a custom position created_by, improved duplicated field warning report

--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -2895,7 +2895,7 @@ FLEXI_BELOW_TABS="Below TABs"
 FLEXI_HANDLED_BY_FIELDS_MANAGER="via CORE or 'CORE property' fields"
 FLEXI_HANDLED_BY_FIELDS_MANAGER_DESC="Fields added here will be placed by the fields manager, note: create a 'CORE property' field in FIELDS manager for every CORE property not having already a CORE field"
 
-FLEXI_COMMA_LIST_OF_CORE_FIELDS_PROPS="Enter a comma separated list of core fields or core property field"
+FLEXI_COMMA_LIST_OF_CORE_FIELDS_PROPS="Enter a comma separated list of FIELDNAMES, fieldnames of core fields or core property fields"
 FLEXI_FORM_TAB_TITLES="Tab titles"
 FLEXI_FORM_TAB_TITLES_DESC="A comma separated list of every tab's name and its language, like: tab_number:language_string, e.g. <br/> 1:FLEXI_BASIC, 2:FLEXI_DESCRIPTION, 3:__TYPE_NAME__, 4:FLEXI_PUBLISHING, 5:FLEXI_META_SEO, 6:FLEXI_DISPLAYING, 7:FLEXI_TEMPLATE"
 FLEXI_FORM_TAB_ICONS="Tab icons"
