Fixed per category ordering in items manager not always grouping items according to the category in category filter

--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -3346,3 +3346,7 @@ FLEXI_FORM_SELECT="Select"
 ; v3 Layout improvements
 FLEXI_LAYOUT_CUSTOM_DISPLAY_TITLE="Layout custom title"
 FLEXI_LAYOUT_CUSTOM_DISPLAY_TITLE_DESC="This will be displayed to frontend user, e.g. as tooltip of frontend layout switcher"
+
+; about ordering in items manager
+FLEXI_SUBCATEGORIES_NOT_INCLUDED_DURING_CATORDER="Sub-categories not included during specific category ordering"
+FLEXI_SUBCATEGORIES_NOT_INCLUDED_DURING_CATORDER_DESC="Items may belong to both: <br/> (a) currently filtered category <br/>(b) to any of its subcategories, <br/> -- Thus item may get listed in a subcategory instead of the currently filtered category, to avoid this sub-categories are not included"
