Minor changes, a language string for content import, removed default CSS max-width for item form in type parameters

--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -3350,3 +3350,8 @@ FLEXI_LAYOUT_CUSTOM_DISPLAY_TITLE_DESC="This will be displayed to frontend user,
 ; about ordering in items manager
 FLEXI_SUBCATEGORIES_NOT_INCLUDED_DURING_CATORDER="Sub-categories not included during specific category ordering"
 FLEXI_SUBCATEGORIES_NOT_INCLUDED_DURING_CATORDER_DESC="Items may belong to both: <br/> (a) currently filtered category <br/>(b) to any of its subcategories, <br/> -- Thus item may get listed in a subcategory instead of the currently filtered category, to avoid this sub-categories are not included"
+
+; v3.1+ Configuration import / export
+FLEXI_IMPORT_CONFIGURATION="Import configuration"
+FLEXI_IMPORT_CONTENT="Import content"
+FLEXI_XMLFILE="XML File"
