Added ability for automatic title (set to item ID) and for hiding title in frontend if automatic

--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -2520,6 +2520,7 @@ FLEXI_EDIT_HELP_INLINE="Inline info box"
 FLEXI_SELECT_FIELDS_TO_TOGGLE_PROPERTY="Select fields to toggle their property"
 FLEXI_FIELDS_TOGGLED_PROPERTY="Toggled property '%s' for - %s - Field(s). "
 FLEXI_FIELDS_TOGGLED_PROPERTY_FIELDS_SKIPPED="Skipped - %d - Field(s), (%d) due to not supporting the property, and (%d) due to being locked by another user"
+FLEXI_TOGGLE_SEARCH_FLAG="Toggle search flag"
 ;
 FLEXI_BASIC_INDEX_S="Basic Search Index"
 FLEXI_BASIC_INDEX="Basic Search Index: <small>1 record per item </small>"
@@ -3351,7 +3352,20 @@ FLEXI_LAYOUT_CUSTOM_DISPLAY_TITLE_DESC="This will be displayed to frontend user,
 FLEXI_SUBCATEGORIES_NOT_INCLUDED_DURING_CATORDER="Sub-categories not included during specific category ordering"
 FLEXI_SUBCATEGORIES_NOT_INCLUDED_DURING_CATORDER_DESC="Items may belong to both: <br/> (a) currently filtered category <br/>(b) to any of its subcategories, <br/> -- Thus item may get listed in a subcategory instead of the currently filtered category, to avoid this sub-categories are not included"
 
+; Support for automatic title
+FLEXI_AUTO_TITLE="Automatic title"
+FLEXI_AUTO_TITLE_DESC="You can set title to an automatic value"
+FLEXI_SET_TO_ID="Set to ID"
+FLEXI_HIDE_IF_AUTO="Hide if automatic"
+FLEXI_USE_TITLE_EDIT_FIELD="Use title"
+FLEXI_USE_TITLE_EDIT_FIELD_DESC="Select to display or hide item title <br/> - you can set to automatic in type parameters"
+
 ; v3.1+ Configuration import / export
-FLEXI_IMPORT_CONFIGURATION="Import configuration"
-FLEXI_IMPORT_CONTENT="Import content"
+FLEXI_CONTENT_IMPORT="Content import"
+FLEXI_WEBSITE_APPS_IMPORT_EXPORT="Apps import / export"
 FLEXI_XMLFILE="XML File"
+FLEXI_EXPORT="Export"
+FLEXI_EXPORT_SELECTED="Export selected"
+FLEXI_EXPORT_CLEAR_LIST="Clear export list"
+FLEXI_ADD_MORE="Add more"
+
