--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -2362,8 +2362,8 @@ FLEXI_EDIT_FIELD_VALUES="Edit Field Values"
 FLEXI_ASSOCIATE_ANY_TRANSLATION="Associate any translation (item form)"
 FLEXI_EDIT_CREATION_DATE="Edit creation date (item form)"
 FLEXI_IGNORE_VIEW_STATE="Ignore view State (frontend content lists)"
-FLEXI_VALUES_EDITABLE_BY="Values editable by"
-FLEXI_VALUES_EDITABLE_BY_DESC="Select to allow field values to be edited by all editors or use ACL permission to define who can edit field's values"
+FLEXI_VALUES_EDITABLE_BY_ACL="Values editable by <br/> <small>(edit-values ACL)</small>"
+FLEXI_VALUES_EDITABLE_BY_ACL_DESC="Select to allow field values to be editable by all editors or use 'edit-values' ACL permission to define which usergroups can edit field's values"
 FLEXI_ANY_EDITOR="Any editor"
 FLEXI_USE_ACL_PERMISSION="Use ACL permission"
 FLEXI_NO_ACCESS_LEVEL_TO_EDIT_FIELD="You don't have an access level that permits editing this field"
@@ -2923,6 +2923,10 @@ FLEXI_PERMIT_SUBMISSION_DESC="Select to allow content items of this type to be c
 FLEXI_ANY_AUTHOR="Any author"
 FLEXI_USE_ACL_TO_HIDE="Use ACL to hide"
 FLEXI_USE_ACL_TO_DISABLE="Use ACL to disable"
+FLEXI_USE_ACL_AND_NO_EDIT_MSG="ACL, no edit message"
+FLEXI_USE_ACL_AND_NO_EDIT_MSG_DISPLAY="ACL, no edit message + display values"
+FLEXI_USE_ACL_AND_DISPLAY_ONLY="ACL, display values"
+FLEXI_USE_ACL_AND_HIDE="ACL, hide field"
 
 ; Category manager
 FLEXI_MAX_DEPTH="Max depth"
