Fixed translate task in items manager to add new item into language associatons, also improved language field making it required and removed from it the meaningless option for language 'ALL'

--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -2430,6 +2430,7 @@ FLEXI_ARE_YOU_SURE="Are you sure ?"
 FLEXI_SELECT_LIST_ITEMS_TO="Please select items to %s"
 FLEXI_ARCHIVE_CONFIRM="Move item(s) to Archive ?"
 FLEXI_TRASH_CONFIRM="Move item(s) Trash ?"
+FLEXI_DELETE_PERMANENTLY="to delete permanently, filter by trashed state and then select and delete"
 FLEXI_RESTORE_CONFIRM="Restore item(s) (to published state) ?"
 FLEXI_DELETE="Delete"
 FLEXI_TRASH="Trash"
