--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -2727,6 +2727,9 @@ FLEXI_FILTER_FIRST_OPTION_TEXT_DESC="Text of first option of the Drop-Down Selec
 FLEXI_DISPLAY_AS_DROP_DOWN="Drop-down selector"
 FLEXI_DISPLAY_AS_DROP_DOWN_RANGE="Drop-down selector (range)"
 
+FLEXI_DISPLAY_AS_SLIDER="Slider"
+FLEXI_DISPLAY_AS_SLIDER_RANGE="Slider (range)"
+
 FLEXI_DISPLAY_AS_TEXT_SEARCH="Text Search"
 FLEXI_DISPLAY_AS_TEXT_SEARCH_RANGE="Text Search (range)"
 FLEXI_DISPLAY_AS_DATE_PICKER="Date picker"
@@ -3364,6 +3367,16 @@ FLEXI_SET_TO_ID="Set to ID"
 FLEXI_HIDE_IF_AUTO="Hide if automatic"
 FLEXI_USE_TITLE_EDIT_FIELD="Use title"
 FLEXI_USE_TITLE_EDIT_FIELD_DESC="Select to display or hide item title <br/> - you can set to automatic in type parameters"
+
+; Slider JS lib, filter, field, etc
+FLEXI_FILTER_SLIDER_DATA="Slider data"
+FLEXI_FILTER_SLIDER_DATA_DESC="Either use found field values, or specify your custom range of values"
+FLEXI_FILTER_SLIDER_CUSTOM_VALUES="Custom values"
+FLEXI_FILTER_SLIDER_CUSTOM_VALUES_DESC="Custom range of values, please use values that exist in the field !, for format, see example format, enter comma separated values:  percentage%: 'value', and instead of 0% or 100%, you must use 'min': 'value' and 'max':'min': 'value'"
+FLEXI_FILTER_SLIDER_CUSTOM_LABELS="Custom labels"
+FLEXI_FILTER_SLIDER_CUSTOM_LABELS_DESC="Custom labels to much the values, please enter a ## separated labels without start/end quotes"
+FLEXI_FILTER_SLIDER_CUSTOM_LABELS_ARE_LANG_STRING="Labels are language strings"
+FLEXI_FILTER_SLIDER_CUSTOM_LABELS_ARE_LANG_STRING_DESC="Set this to yes to treat labels as language strings, remember to add these to your Joomla language overrides manager or in other loaded language files"
 
 ; v3.1+ Configuration import / export
 FLEXI_CONTENT_IMPORT="Content import"
