+ Added custom display format for the filter display of fields: date, last modified, created

--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -2595,6 +2595,8 @@ FLEXI_FILTERING_CONF="Filtering"
 FLEXI_FILTERING_CONF_DESC="Parameters used for filtering in (a) content lists views , (b) search view"
 
 ; enhancements of search/filtering : Creation of filter values of date containing fields
+FLEXI_FILTER_DATE_LABEL_FORMAT="Display date custom format"
+FLEXI_FILTER_DATE_LABEL_FORMAT_DESC="e.g. '%Y-%M' will display '2025-August' see docs of SQL function DATE_FORMAT, common: %d Day of the month, numeric (00..31), %b Abbreviated month name (Jan..Dec), %M Month name (January..December), %m Month numeric (00..12), %Y Year numeric, four digits, %y Year numeric (two digits)"
 FLEXI_FILTER_DATE_GROUPING="Filter Grouping <br/><small>for non-text display types</small>"
 FLEXI_FILTER_DATE_GROUPING_DESC="Select the grouping of dates into years or months or days. This is applicable when filter is displayed as drop-down select field (single or range) or as radio/toggle buttons"
 FLEXI_YEAR="Year"
