--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -3389,3 +3389,9 @@ FLEXI_EXPORT_SELECTED="Export selected"
 FLEXI_EXPORT_CLEAR_LIST="Clear export list"
 FLEXI_ADD_MORE="Add more"
 
+;v missing FTP:
+FLEXI_DESCFTPTITLE="FTP"
+FLEXI_DESCFTP="FTP Details"
+FLEXI_USERNAME="Username"
+FLEXI_PASSWORD="Password"
+
