Reverted most file/field/tag form changes and then did some cleanups and layout improvements for listings

--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -3380,6 +3380,10 @@ FLEXI_FILTER_SLIDER_CUSTOM_LABELS_DESC="Custom labels to much the values, please
 FLEXI_FILTER_SLIDER_CUSTOM_LABELS_ARE_LANG_STRING="Labels are language strings"
 FLEXI_FILTER_SLIDER_CUSTOM_LABELS_ARE_LANG_STRING_DESC="Set this to yes to treat labels as language strings, remember to add these to your Joomla language overrides manager or in other loaded language files"
 
+; Filemanager FTP / other places
+FLEXI_USERNAME="Username"
+FLEXI_PASSWORD="Password"
+
 ; v3.1+ Configuration import / export
 FLEXI_CONTENT_IMPORT="Content import"
 FLEXI_WEBSITE_APPS_IMPORT_EXPORT="Apps import / export"
@@ -3388,10 +3392,4 @@ FLEXI_EXPORT="Export"
 FLEXI_EXPORT_SELECTED="Export selected"
 FLEXI_EXPORT_CLEAR_LIST="Clear export list"
 FLEXI_ADD_MORE="Add more"
-
-;v missing FTP:
-FLEXI_DESCFTPTITLE="FTP"
-FLEXI_DESCFTP="FTP Details"
-FLEXI_USERNAME="Username"
-FLEXI_PASSWORD="Password"
 
