Improved universal content module, allowing it to display and filter items that are scheduled (publish_up) or expired (publish_down)

--- a/modules/mod_flexicontent/languages/en-GB.mod_flexicontent.ini
+++ b/modules/mod_flexicontent/languages/en-GB.mod_flexicontent.ini
@@ -136,7 +136,6 @@ FLEXI_UMOD_EDATE_TO_DESC="If you selected the static behaviour, choose the end d
 
 FLEXI_DATE_CREATED="Created"
 FLEXI_DATE_MODIFIED="Modified"
-FLEXI_DATE_PUBLISH_UP="Publish Up"
 FLEXI_DATE_DATA="Date DATA <br><small>to use in comparison</small>"
 FLEXI_DATE_DATA_DESC="The listed items items will be compared used these date DATA. <br><br><b>NOTE</b>: These are used in both static behaviour and dynamic behaviours"
 
@@ -562,3 +561,12 @@ FLEXI_UMOD_FIELDS_LIST_OR_HTML_WITH_REPLACEMENTS_DESC="Enter a comma separated f
 
 FLEXI_ON_LEFT="On Left"
 FLEXI_ON_RIGHT="On Right"
+
+FLEXI_UMOD_DATE_PUBLISH_UP="Publish Up"
+FLEXI_UMOD_DATE_PUBLISH_DOWN="Publish Down"
+
+FLEXI_UMOD_IGNORE_SCHEDULED_EXPIRED_DATES="Ignore scheduled / expired dates"
+FLEXI_UMOD_IGNORE_SCHEDULED_EXPIRED_DATES_DESC="You can select to ignore publish up/down dates, thus including items scheduled to be published (having a future publish up date) and / or items that have expired (having a past publish down date). This can be combined with DATE filtering scope to give a more useful result. NOTE that you would want not to add links to these items, because these will not be viewable if they have expired or scheduled. An example of such a usage would be show some info of upcoming(scheduled) items or of past (expired) items"
+
+FLEXI_UMOD_USE_LIST_ITEMS_IN_ANY_STATE_ACL="Use 'List items in any state' ACL"
+FLEXI_UMOD_USE_LIST_ITEMS_IN_ANY_STATE_ACL_DESC="Enable this to allow privileged users (ACL privelege: 'list items in any state') and super admins to see ANY state items and items that are scheduled and/or expired. NOTE that you would want to give this module a specific / special view access level"
