--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -1877,7 +1877,7 @@ FLEXI_TYPE_NOT_DEFINED="Type not defined"
 FLEXI_YES_FORCE_READ_MORE="Yes, Force Read More"
 FLEXI_SHOW_UNAUTHORIZED_LINKS_DESC="Content items not authorized to be viewable by current guest or logged user will be included in the content lists (category/favorites/tags/etc lists).<br/><br/>When a user tries to access the detailed view of any authorized content, then non-logged users will be asked to log-in, and already logged users will receive a HTTP 403 Access Forbidden Errors.<br/><br/><b>NOTE:</b> If you enable this feature then you should also set into the parameter 'Unauthorized Page' with the URL of the page to be displayed for these errors"
 
-FLEXI_DISPLAY_STATS_INFO="Display performance statitstics"
+FLEXI_DISPLAY_STATS_INFO="Display performance statistics"
 FLEXI_DISPLAY_STATS_INFO_DESC="Display performance statistics and other execution information"
 FLEXI_YES_VIA_FCDEBUG_URLVAR="URL variable: fcdebug=1"
 FLEXI_NEW_ITEM_NOT_CREATED="The content was not created"
