--- a/modules/mod_flexicontent/languages/en-GB.mod_flexicontent.ini
+++ b/modules/mod_flexicontent/languages/en-GB.mod_flexicontent.ini
@@ -36,7 +36,12 @@ FLEXI_ORDERING_GROUP_ADDTITLE_DESC="This option will add a title to the Ordering
 FLEXI_ORDER_OLDEST_FIRST="Added -- Oldest first"
 FLEXI_ORDER_MOST_RECENT_FIRST="Added -- Most Recent first"
 FLEXI_ORDER_LAST_MODIFIED_FIRST="Modified -- Most Recent first"
-FLEXI_ORDER_RECENTLY_PUBLISHED_FIRST="Published -- Most Recent first"
+
+FLEXI_ORDER_RECENTLY_PUBLISHED_SCHEDULED_FIRST="Published / *Scheduled -- Most Recent first"
+FLEXI_ORDER_OLDEST_PUBLISHED_SCHEDULED_FIRST="Published / *Scheduled -- Most Old first"
+FLEXI_ORDER_RECENTLY_EXPIRING_EXPIRED_FIRST="Expiring / *Expired -- Most Recent first"
+FLEXI_ORDER_OLDEST_EXPIRING_EXPIRED_FIRST="Expiring / *Expired -- Most Old first"
+
 FLEXI_ORDER_TITLE_ALPHABETICAL="Title -- Alphabetical"
 FLEXI_ORDER_TITLE_ALPHABETICAL_REVERSE="Title -- Alphabetical Reverse"
 FLEXI_ORDER_AUTHOR_ALPHABETICAL="Author -- Alphabetical"
