Added preset configuration to the fields for setting value prefix/suffix and field open/close texts, e.g. to create ordered/unordered lists, or wrap values into bootstrap badges

--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -2445,10 +2445,10 @@ FLEXI_MANAGE_AUTHORS="Manage Authors"
 FLEXI_MANAGE_CONTENT_IMPORT="Manage (Content) Import"
 
 ; Extra parameters for peer/sub-category formating
-FLEXI_SHOW_SUBCATS_LABEL="Sub-categories list label *"
+FLEXI_SHOW_SUBCATS_LABEL="Sub-categories list label"
 FLEXI_SHOW_SUBCATS_LABEL_DESC="Display a label before the sub-categories list <br/><br/><b>NOTE:</b> If both sub-category images and descriptions are disabled then the label and the list of records will be placed inside 'inline' containers"
 FLEXI_SUBCATEGORY_ENCLOSING="Record (sub-category) enclosings"
-FLEXI_SHOW_PEERCATS_LABEL="Peer-categories list label *"
+FLEXI_SHOW_PEERCATS_LABEL="Peer-categories list label"
 FLEXI_SHOW_PEERCATS_LABEL_DESC="Display a label before the peer-categories list <br/><br/><b>NOTE:</b> If both sub-category images and descriptions are disabled then the label and the list of records will be placed inside 'inline' containers"
 FLEXI_PEERCATEGORY_ENCLOSING="Record (peer-category) enclosings"
 
