--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -2546,7 +2546,7 @@ FLEXI_INDEX_ADVANCED_SEARCH_VIEW="<a rel="_QQ_"{handler: 'iframe', size: {x: 500
 FLEXI_INDEX_ADVANCED_SEARCH_VIEW_DIRTY_ONLY="<a rel="_QQ_"{handler: 'iframe', size: {x: 500, y: 240}}"_QQ_" href='index.php?option=com_flexicontent&view=search&layout=indexer&tmpl=component&indexer=advanced&rebuildmode=quick' class='modal'>Re-Index Advanced</a><br/><small>(Search View: dirty only)</small>"
 FLEXI_INDEX_ADVANCED_PURGE="Purge Advanced Index"
 FLEXI_ALERT_UPDATE_BASIC_INDEX="- %s - field(s) have a 'dirty' property: <small>(Content Lists 'Text Search')</small> . Please recalculate the <a rel="_QQ_"{handler: 'iframe', size: {x: 500, y: 240}}"_QQ_" href='index.php?option=com_flexicontent&view=search&layout=indexer&tmpl=component&indexer=basic' class='modal btn'>-BASIC- Search Index</a> once !!!"
-FLEXI_ALERT_UPDATE_ADVANCED_INDEX="- %s - field(s) have a 'dirty' property: <small>(Search View 'Text Searchable OR Filterable')</small> . Please recalculate the <a rel="_QQ_"{handler: 'iframe', size: {x: 500, y: 240}}"_QQ_" href='index.php?option=com_flexicontent&view=search&layout=indexer&tmpl=component&indexer=advanced' class='modal'>-ADVANCED- Search Index</a> NOW!"
+FLEXI_ALERT_UPDATE_ADVANCED_INDEX="- %s - field(s) have a 'dirty' property: <small>(Search View 'Text Searchable OR Filterable')</small> . Please recalculate the <a rel="_QQ_"{handler: 'iframe', size: {x: 500, y: 240}}"_QQ_" href='index.php?option=com_flexicontent&view=search&layout=indexer&tmpl=component&indexer=advanced' class='modal btn'>-ADVANCED- Search Index</a> NOW!"
 ;
 FLEXI_CLICK_TO_TOGGLE="click to toggle"
 FLEXI_TOGGLE_TEXT_SEARCHABLE="Text Search"
