Added reverse order for filter values to fields date, text, textselect. Also removed some redudant order clauses in core fields to improve speed

--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -3384,6 +3384,10 @@ FLEXI_FILTER_SLIDER_CUSTOM_LABELS_ARE_LANG_STRING_DESC="Set this to yes to treat
 FLEXI_USERNAME="Username"
 FLEXI_PASSWORD="Password"
 
+; Filter ordering
+FLEXI_FILTER_USER_REVERSE_ORDER="Reverse order"
+FLEXI_FILTER_USER_REVERSE_ORDER_DESC="Enable to order filter values in reverse"
+
 ; v3.1+ Configuration import / export
 FLEXI_CONTENT_IMPORT="Content import"
 FLEXI_WEBSITE_APPS_IMPORT_EXPORT="Apps import / export"
