Fixed image field to be able to link to item in category view while being inside a field group, fixed textselect field to be able to use custom values or SQL query for creating filtering values, also added support for reversing filter values order

--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -3385,8 +3385,10 @@ FLEXI_USERNAME="Username"
 FLEXI_PASSWORD="Password"
 
 ; Filter ordering
-FLEXI_FILTER_USER_REVERSE_ORDER="Reverse order"
-FLEXI_FILTER_USER_REVERSE_ORDER_DESC="Enable to order filter values in reverse"
+FLEXI_FILTER_VALUE_ORDER="Filter value order"
+FLEXI_FILTER_VALUE_ORDER_DESC="Enable to display filter values in reverse ordering. NOTE that in the case of slider range display, the left handle will be the maximum, and the right handle will be the minimum"
+FLEXI_ORDER_NORMAL="Normal"
+FLEXI_ORDER_REVERSE="Reverse"
 
 ; v3.1+ Configuration import / export
 FLEXI_CONTENT_IMPORT="Content import"
