Added microdata support (thanks to Yannick) to type configuration, and fields text, select(multiple), radio(image), checkbox(image), and to blog template (both item and category layout), TODO: add to more fields and do the remaining templates and do more through testing

--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -3390,6 +3390,16 @@ FLEXI_FILTER_VALUE_ORDER_DESC="Enable to display filter values in reverse orderi
 FLEXI_ORDER_NORMAL="Normal"
 FLEXI_ORDER_REVERSE="Reverse"
 
+; Microdata
+FLEXI_MICRODATA="Microdata"
+FLEXI_MICRODATA_SUPPORT="Microdata support"
+FLEXI_MICRODATA_SUPPORT_DESC="Enable this to add microdata tagging into your document"
+
+FLEXI_MICRODATA_ITEMTYPE="Microdata type"
+FLEXI_MICRODATA_ITEMTYPE_DESC="Select a microdata type to that will characterize all items of the type. This will allow search engines to categorize your content appropriately, improving SEO of your pages"
+FLEXI_MICRODATA_ITEMPROP="Microdata property"
+FLEXI_MICRODATA_ITEMPROP_DESC="Select a microdata property to characterize all values of this field. This will allow search engines to categorize values of this field appropriately, improving SEO of your pages"
+
 ; v3.1+ Configuration import / export
 FLEXI_CONTENT_IMPORT="Content import"
 FLEXI_WEBSITE_APPS_IMPORT_EXPORT="Apps import / export"
