Added per content type default image to the category layout of the blog template, different parameters for leading (1st part of items list), and for standard (2nd part of item list)

--- a/site/templates/blog/language/en-GB/en-GB.ini
+++ b/site/templates/blog/language/en-GB/en-GB.ini
@@ -13,3 +13,6 @@ FLEXI_TMPL_BLOG_CATEGORY_SHORT_DESC="Category layout similar to the Joomla blog 
 
 FLEXI_TMPL_BLOG_ITEM_DEFAULT_TITLE="Basic"
 FLEXI_TMPL_BLOG_ITEM_SHORT_DESC="Simple item layout, with a few positions, and CORE fields selection via parameters"
+
+FLEXI_TMPL_BLOG_DEFAULT_IMAGES="Default images (per type)"
+FLEXI_TMPL_BLOG_DEFAULT_IMAGES_DESC="Either enter an image-path relative to Joomla root folder: <br/> image-path <br/><br/> or enter per type, comma separated:<br/> _OTHER_##image-path, type-alias1##image-path1, type-alias2##image-path2"
