--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -3396,7 +3396,14 @@ FLEXI_MICRODATA_SUPPORT="Microdata support"
 FLEXI_MICRODATA_SUPPORT_DESC="Enable this to add microdata tagging into your document"
 
 FLEXI_MICRODATA_ITEMTYPE="Microdata type"
-FLEXI_MICRODATA_ITEMTYPE_DESC="Select a microdata type to that will characterize all items of the type. This will allow search engines to categorize your content appropriately, improving SEO of your pages"
+FLEXI_MICRODATA_ITEMTYPE_DESC="Select a microdata type to that will characterize all items of the type. MICRODATA allow search engines to categorize your content appropriately, improving SEO of your pages"
+
+FLEXI_MICRODATA_ITEMTYPE_ITEM_OVERRIDE="Force microdata type"
+FLEXI_MICRODATA_ITEMTYPE_ITEM_OVERRIDE_DESC="Select a microdata type to that characterize this item, this will override the microdata type that is specified via content type. MICRODATA allow search engines to categorize your content appropriately, improving SEO of your pages"
+
+FLEXI_MICRODATA_ITEMTYPE_LIST_OVERRIDE="Force microdata type"
+FLEXI_MICRODATA_ITEMTYPE_LIST_OVERRIDE_DESC="This will override the microdata type that is specified via content type / content item parameters. <br/><br/>MICRODATA allow search engines to categorize your content appropriately, improving SEO of your pages"
+
 FLEXI_MICRODATA_ITEMPROP="Microdata property"
 FLEXI_MICRODATA_ITEMPROP_DESC="Select a microdata property to characterize all values of this field. This will allow search engines to categorize values of this field appropriately, improving SEO of your pages"
 
