Moved MICRODATA itemtype to the SEO Tab and added it to the category-based menu items too

--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -1949,15 +1949,16 @@ FLEXI_OVERRIDE_CONF_NO="No, use defaults"
 FLEXI_OVERRIDE_CONF_YES="Yes, use parameters below"
 FLEXI_JOOMLA_DEFAULT="Joomla 's default"
 
-FLEXI_PARAMETERS_CAT_BASIC_OVERRIDE_CONF="Basic Parameters <small style='color:darkgreen;'>(enable override here)</small>"
-FLEXI_PARAMETERS_CAT_INFO_OPTIONS_OVERRIDE="<b style='color:darkgreen;'>override:</b> Parameters: <small>Category Info &amp; Options</small>"
-FLEXI_PARAMETERS_CAT_ITEMS_LIST_OVERRIDE="<b style='color:darkgreen;'>override:</b> Parameters: <small>Items List Creation</small>"
-FLEXI_PARAMETERS_CAT_ITEM_FILTERING_OVERRIDE="<b style='color:darkgreen;'>override:</b> Parameters: <small>Alpha-Index, Search, Filters</small>"
-FLEXI_PARAMETERS_CAT_LAYOUT_OVERRIDE="<b style='color:darkgreen;'>override:</b> Layout Selection"
-FLEXI_PARAMETERS_CAT_RSS_FEEDS_OVERRIDE="<b style='color:darkgreen;'>override:</b> Parameters: <small>RSS Feeds List</small>"
-FLEXI_PARAMETERS_CAT_ITEM_MARKUPS_OVERRIDE="<b style='color:darkgreen;'>override:</b> Parameters: <small>Content Markups</small>"
-FLEXI_PARAMETERS_CAT_SUBCATS_INFO_OPTIONS_OVERRIDE="<b style='color:darkgreen;'>override:</b> Parameters: <small>Sub-categories (1st sub-level)</small>"
-FLEXI_PARAMETERS_CAT_PEERCATS_INFO_OPTIONS_OVERRIDE="<b style='color:darkgreen;'>override:</b> Parameters: <small>Peer-Categories (same-level)</small>"
+FLEXI_PARAMETERS_CAT_BASIC_OVERRIDE_CONF="Basic Parameters <span style='color:darkgreen; font-weight:bold;'>(enable override here)</span>"
+FLEXI_PARAMETERS_CAT_INFO_OPTIONS_OVERRIDE="<span style='color:darkgreen;'>Category Info &amp; Options</span>"
+FLEXI_PARAMETERS_CAT_ITEMS_LIST_OVERRIDE="<span style='color:darkgreen;'>Items List Creation</span>"
+FLEXI_PARAMETERS_CAT_ITEM_FILTERING_OVERRIDE="<span style='color:darkgreen;'>Alpha-Index, Search, Filters</span>"
+FLEXI_PARAMETERS_CAT_LAYOUT_OVERRIDE="Layout Selection"
+FLEXI_PARAMETERS_CAT_RSS_FEEDS_OVERRIDE="<span style='color:darkgreen;'>RSS Feeds List</span>"
+FLEXI_PARAMETERS_CAT_SEO_OVERRIDE="<span style='color:darkgreen;'>SEO</span>"
+FLEXI_PARAMETERS_CAT_ITEM_MARKUPS_OVERRIDE="<span style='color:darkgreen;'>Content Markups</span>"
+FLEXI_PARAMETERS_CAT_SUBCATS_INFO_OPTIONS_OVERRIDE="<span style='color:darkgreen;'>Sub-categories (1st sub-level)</span>"
+FLEXI_PARAMETERS_CAT_PEERCATS_INFO_OPTIONS_OVERRIDE="<span style='color:darkgreen;'>Peer-Categories (same-level)</span>"
 
 FLEXI_SELECT_MYITEMS_CATEGORY="Limit user's items to a category"
 FLEXI_SELECT_MYITEMS_CATEGORY_DESC="Optionally limit the displayed user's items to a specific category"
