--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -769,8 +769,8 @@ FLEXI_CHOOSE_SPECIFIC_TYPEITEMS_LAYOUT_DESC="Set a default item layout for all t
 FLEXI_CHOOSE_SPECIFIC_TYPEITEMS_LAYOUT="Default Item layout"
 FLEXI_HIDE_HTML_DESC="Hide the Html editor in the item form for this specific type."
 FLEXI_HIDE_HTML="Hide Html Editor"
-FLEXI_HIDE_MAINTEXT_DESC="Hide the maintext field in the item form (not recommended !!!). TAKE CARE, you will loose the com_content backwards compatibility for these items !!!"
-FLEXI_HIDE_MAINTEXT="Hide maintext field"
+FLEXI_HIDE_MAINTEXT_DESC="Hide the description (maintext) field in the item form (not recommended !!!). TAKE CARE, you will loose the com_content backwards compatibility for these items !!!"
+FLEXI_HIDE_MAINTEXT="Hide description field"
 FLEXI_MAINTEXT_DESC_DESC="The main text field toolip in the item form. Default is 'Description' or what you have set in the field screen."
 FLEXI_MAINTEXT_DESC="Description tootip"
 FLEXI_MAINTEXT_LABEL_DESC="The main text field label in the item form. Default is 'Description' or what you have set in the field screen."
@@ -3407,6 +3407,11 @@ FLEXI_MICRODATA_ITEMTYPE_LIST_OVERRIDE_DESC="This will override the microdata ty
 
 FLEXI_MICRODATA_ITEMPROP="Microdata property"
 FLEXI_MICRODATA_ITEMPROP_DESC="Select a microdata property to characterize all values of this field. This will allow search engines to categorize values of this field appropriately, improving SEO of your pages"
+
+; Item form Approval warning
+FLEXI_DISPLAY_APPROVAL_NEEDED_WARNING="Approval needed warning"
+FLEXI_DISPLAY_APPROVAL_NEEDED_WARNING_DESC="Enable this, to show a message inside item form, whether current user can publish new items or if they can self-approve changes to existing items"
+
 
 ; v3.1+ Configuration import / export
 FLEXI_CONTENT_IMPORT="Content import"
