Added new parameter in compoent/type/menu configuration to disable, approval needed warning after form submission. Also modified language strings for approval needed warnings, to be more neutral/general

--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -3409,8 +3409,11 @@ FLEXI_MICRODATA_ITEMPROP="Microdata property"
 FLEXI_MICRODATA_ITEMPROP_DESC="Select a microdata property to characterize all values of this field. This will allow search engines to categorize values of this field appropriately, improving SEO of your pages"
 
 ; Item form Approval warning
-FLEXI_DISPLAY_APPROVAL_NEEDED_WARNING="Approval needed warning"
-FLEXI_DISPLAY_APPROVAL_NEEDED_WARNING_DESC="Enable this, to show a message inside item form, whether current user can publish new items or if they can self-approve changes to existing items"
+FLEXI_APPROVAL_NEEDED_WARNINGS="Display approval needed warnings"
+FLEXI_INFORM_APPROVAL_NEEDED_WARNING="Inside form"
+FLEXI_INFORM_APPROVAL_NEEDED_WARNING_DESC="Enable this, to show a message inside item form, whether current user can publish new items or if they can self-approve changes to existing items"
+FLEXI_AFTERSUBMIT_APPROVAL_NEEDED_WARNING="After form submit"
+FLEXI_AFTERSUBMIT_APPROVAL_NEEDED_WARNING_DESC="Enable this, to show an after form submit warning, saying if approval is needed for new item being published or for the changes to existing item becoming active"
 
 
 ; v3.1+ Configuration import / export
