--- a/site/language/en-GB/en-GB.com_flexicontent.ini
+++ b/site/language/en-GB/en-GB.com_flexicontent.ini
@@ -261,9 +261,9 @@ FLEXI_ADV_MOST_POP="Most popular"
 FLEXI_ADV_ALPHA="Alphabetical"
 FLEXI_ADV_SEARCH_SEC_CAT="Section/Category"
 
-FLEXI_LOADING_UNAPPROVED_VERSION_NOTICE="NOTICE: loaded an unapproved document version, which is different than the CURRENT version that is visible to the viewers"
-FLEXI_SAVED_VERSION_MUST_BE_APPROVED_NOTICE="NOTICE: your new version of the document must be approved by an administrator or publisher before it becomes current and thus visible to the viewers"
-FLEXI_SAVED_VERSION_WAS_NOT_APPROVED_NOTICE="NOTICE: your new version of the document was not approved, so it is not yet current and thus visible to the viewers"
+FLEXI_LOADING_UNAPPROVED_VERSION_NOTICE="NOTICE: loaded an inactive/unapproved document version, which will need reviewal and approval by the site administrator before it becomes the ACTIVE version"
+FLEXI_SAVED_VERSION_MUST_BE_APPROVED_NOTICE="NOTICE: your new version of the document must be reviewed and approved by an administrator before it becomes the ACTIVE version"
+FLEXI_SAVED_VERSION_WAS_NOT_APPROVED_NOTICE="NOTICE: you did not activate/approved your new version of the document, so your changes are not yet the ACTIVE version"
 FLEXI_LOADED_VERSION_INFO_NOTICE="Loaded document version --%d-- . Current document version: --%d--"
 
 FLEXI_FEED="Feed Entries"
@@ -278,11 +278,11 @@ FLEXI_APPLY_TYPE="Apply Type"
 FLEXI_APPLY="Apply"
 
 FLEXI_REQUIRES_VERSION_REVIEWAL="Please note that your new document <b>version</b> will be reviewed and approved by a site administrator"
-FLEXI_REQUIRES_DOCUMENT_APPROVAL="Please note that your <b>new content</b> will be reviewed and published by a site administrator"
+FLEXI_REQUIRES_DOCUMENT_APPROVAL="Please note that your <b>new content</b> will be reviewed and accepted by a site administrator"
 FLEXI_MIGHT_REQUIRE_VERSION_REVIEWAL="Please note, your new document <b>version</b> might need to be reviewed and approved. This may depend on the content's category AND/OR the content's type. You will be notified whether approval is needed, after you save this content."
-FLEXI_MIGHT_REQUIRE_DOCUMENT_APPROVAL="Please note, that your new content might require approval before being published. This may depend on the content's category AND/OR the content's type. You will be notified whether approval is needed, after you save this content."
+FLEXI_MIGHT_REQUIRE_DOCUMENT_APPROVAL="Please note, that your new content might require approval before being accepted. This may depend on the content's category AND/OR the content's type. You will be notified whether approval is needed, after you save this content."
 
-FLEXI_CHANGES_APPLIED_IMMEDIATELY="Please note, that document versioning is disabled, thus any changes that you make to this content will be published immediately and previous version will be permanently overwritten"
+FLEXI_CHANGES_APPLIED_IMMEDIATELY="Please note, that document versioning is disabled, thus any changes that you make to this content will be accepted/activated immediately and previous version will be permanently overwritten"
 FLEXI_CONTENT_WILL_BE_AUTOPUBLISHED="Please note, that document is set to be autopublished after _PUBLISH_UP_DAYS_INTERVAL_ days (zero means immediately), and expire after _PUBLISH_DOWN_DAYS_INTERVAL_ days (zero means never expire)"
 
 FLEXI_NEEDS_APPROVAL="Please note, that any changes that you make to this content will need to be reviewed and approved"
